--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,12 @@
 
 body {
     background-color: #7e7e7e;
+    background-image: url("http://sf.co.ua/14/03/wallpaper-1833811.jpg");
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-size: cover;
 }
 
 header,
@@ -30,8 +36,14 @@ footer {
 
 main {
     color: #000000;
-    background-color: #ffffff;
 }
+
+#about-me,
+#portfolio,
+#contact-me {
+    background-color: rgba(255,255,255,0.75);
+}
+
 
 .navigation {
     position: fixed;
@@ -113,11 +125,22 @@ main {
     transform: translate(-50%,-50%);
 }
 
-.intro > h1,
-.intro > h2 {
+.intro > h1 {
     font-size: 4.5em;
-    font-weight: 200;
+    font-weight: 600;
+    letter-spacing: 2px;
     text-align: center;
+    color: white;
+    text-shadow: 2px 2px black;
+}
+
+.intro > h2 {
+    margin-top: 2em;
+    font-size: 2.5em;
+    font-weight: 100;
+    letter-spacing: 4px;
+    text-align: center;
+    color: white;
 }
 
 .about-me > h2,
