--- a/styles/styles.css
+++ b/styles/styles.css
@@ -158,7 +158,7 @@ main {
     font-weight: 600;
     text-align: center;
     margin-top: 1.5em;
-    margin-bottom: 1em;
+    margin-bottom: 0.4em;
 }
 
 .about-me > p,
@@ -174,6 +174,19 @@ main {
 .about-me > ul > li {
     text-align: left;
 }
+
+#skills > li {
+    text-align: center;
+    list-style: none;
+    font-weight: 300;
+}
+
+#skills > li > div > img {
+    height: 70px;
+    margin-top: 0.3em;
+    margin-bottom: 0.5em;
+}
+
 
 .portfolio > ul > li {
     list-style: none;
