Removing and changing texts, fixing layouts

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,7 +41,7 @@ main {
 #about-me,
 #portfolio,
 #contact-me {
-    background-color: rgba(255,255,255,0.75);
+    background-color: rgba(255,255,255,0.85);
 }
 
 
@@ -73,7 +73,7 @@ main {
 }
 
 .navigation-logo > a {
-    color: #7e7e7e;
+    color: #417aff;
     text-decoration: none;
 }
 
@@ -93,12 +93,14 @@ main {
 }
 
 .navigation-buttons > ul > li > a {
-    color: #7e7e7e;
+    /*color: #88bbff;*/
+    color: #ffffff;
     text-decoration: none;
 }
 
 .navigation-buttons > ul > li > a:hover {
-    color: #ffffff;
+    /*color: #ffffff;*/
+    color: #006dff;
     text-decoration: none;
 }
 
@@ -176,9 +178,12 @@ main {
 }
 
 #skills > li {
+    float: left;
+    width: 50%;
     text-align: center;
     list-style: none;
     font-weight: 300;
+    margin-bottom: 1em;
 }
 
 #skills > li > div > img {
@@ -187,11 +192,25 @@ main {
     margin-bottom: 0.5em;
 }
 
+#skills > li > div > a > img {
+    margin-top: 0.3em;
+    margin-bottom: 0.5em;
+}
+
+.clear {
+    clear: left;
+    display: block;
+}
+
 
 .portfolio > ul > li {
+    float: left;
+    width: 50%;
     list-style: none;
     margin-top: 1.5em;
     margin-bottom: 1em;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
 .portfolio > ul > li > a {
