--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,7 +44,6 @@ main {
     background-color: rgba(255,255,255,0.85);
 }
 
-
 .navigation {
     position: fixed;
     top: 0;
@@ -54,7 +53,6 @@ main {
     font-size: 1.6em;
     font-weight: 400;
     z-index: 100;
-    /*display: none;*/
 }
 
 .navigation-container {
@@ -67,6 +65,7 @@ main {
 .navigation-logo > a > img {
     border-radius: 6px;
     margin-top: 0.6em;
+    margin-left: 0.6em;
     height: 2em;
     width: 2em;
     position: absolute;
@@ -74,11 +73,6 @@ main {
 
 .navigation-logo > a {
     color: #417aff;
-    text-decoration: none;
-}
-
-.navigation-logo > a:hover {
-    color: #ffffff;
     text-decoration: none;
 }
 
@@ -93,14 +87,14 @@ main {
 }
 
 .navigation-buttons > ul > li > a {
-    /*color: #88bbff;*/
     color: #ffffff;
     text-decoration: none;
 }
 
-.navigation-buttons > ul > li > a:hover {
-    /*color: #ffffff;*/
+.navigation-buttons > ul > li:hover,
+.navigation-buttons > ul > li > a:hover{
     color: #006dff;
+    transform: scale(1.08);
     text-decoration: none;
 }
 
@@ -262,9 +256,7 @@ main {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 4em;
     line-height: 1.2em;
-    font-size: 1.2em;
     font-weight: 200;
     text-align: center;
     z-index: 100;
@@ -272,15 +264,26 @@ main {
 
 .footer-bar-container > ul > li {
     display: inline-block;
-    margin: 0 0.5em 0 0.5em;
-    line-height: 2em;
-    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-left: 8px;
+    margin-right: 8px;
+    font-size: 2em;
 }
 
-.footer-bar-container > p {
-    font-size: 0.8em;
+.footer-bar-container  > ul > li > a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.footer-bar-container  > ul > li > a > i:hover {
+    transform: scale(1.10);
+    color: #006dff;
+}
+
+.footer-bar-container  > ul > li > p {
+    font-size: 0.7em;
     font-weight: 100;
-    text-align: center;
 }
 
 button,
