--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 .color-bright {
     color: #ffffff;
 }
@@ -50,7 +54,7 @@ main {
     width: 100%;
     height: 3em;
     line-height: 3em;
-    font-size: 1.6em;
+    font-size: 2.6rem;
     font-weight: 400;
     z-index: 100;
 }
