--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ main {
 }
 
 .intro > h1 {
-    font-size: 4.5em;
+    font-size: 7.2rem;
     font-weight: 600;
     letter-spacing: 2px;
     text-align: center;
@@ -137,7 +137,7 @@ main {
 
 .intro > h2 {
     margin-top: 2em;
-    font-size: 2.5em;
+    font-size: 4.0rem;
     font-weight: 100;
     letter-spacing: 4px;
     text-align: center;
@@ -147,14 +147,14 @@ main {
 .about-me > h2,
 .portfolio > h2,
 .contact-me > h2 {
-    font-size: 4.5em;
+    font-size: 7.2rem;
     font-weight: 200;
     text-align: center;
     margin: 1em 0 1em 0;
 }
 
 .about-me > h3 {
-    font-size: 2.4em;
+    font-size: 4.0rem;
     font-weight: 600;
     text-align: center;
     margin-top: 1.5em;
@@ -163,7 +163,7 @@ main {
 
 .about-me > p,
 .about-me > ul > li {
-    font-size: 2.4em;
+    font-size: 4.0rem;
     font-weight: 200;
 }
 
@@ -212,7 +212,7 @@ main {
 }
 
 .portfolio > ul > li > a {
-    font-size: 2.4em;
+    font-size: 4.0rem;
     font-weight: 600;
     text-align: left;
     margin-top: 1.5em;
@@ -220,7 +220,7 @@ main {
 }
 
 .portfolio > ul > li > p {
-    font-size: 2.4em;
+    font-size: 4.0rem;
     font-weight: 200;
 }
 
@@ -232,7 +232,7 @@ main {
     border-color: #7e7e7e;
     border-style: solid;
     border-radius: 0.4em;
-    font-size: 2.4em;
+    font-size: 4.0rem;
     font-weight: 200;
     line-height: 1.4em;
     margin-bottom: 0.8em;
@@ -272,7 +272,7 @@ main {
     padding-bottom: 15px;
     margin-left: 8px;
     margin-right: 8px;
-    font-size: 2em;
+    font-size: 2.8rem;
 }
 
 .footer-bar-container  > ul > li > a {
@@ -286,7 +286,7 @@ main {
 }
 
 .footer-bar-container  > ul > li > p {
-    font-size: 0.7em;
+    font-size: 2.2rem;
     font-weight: 100;
 }
 
