--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ main {
 #about-me,
 #portfolio,
 #contact-me {
-    background-color: rgba(255,255,255,0.85);
+    background-color: rgba(255, 255, 255, 0.85);
 }
 
 .navigation {
@@ -92,7 +92,7 @@ main {
 }
 
 .navigation-buttons > ul > li:hover,
-.navigation-buttons > ul > li > a:hover{
+.navigation-buttons > ul > li > a:hover {
     color: #006dff;
     transform: scale(1.08);
     text-decoration: none;
@@ -103,6 +103,7 @@ main {
     margin-left: auto;
     margin-right: auto;
     padding-top: 4.6em;
+    padding-bottom: 3.8em;
 }
 
 #intro,
@@ -119,7 +120,7 @@ main {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
 
 .intro > h1 {
@@ -146,7 +147,7 @@ main {
     font-size: 4.5em;
     font-weight: 200;
     text-align: center;
-    margin: 1em 0 1em 0;
+    margin: 1em 0 0.7em 0;
 }
 
 .about-me > h3 {
@@ -196,33 +197,91 @@ main {
     display: block;
 }
 
-
-.portfolio > ul > li {
-    float: left;
-    width: 50%;
+.portfolio-box {
+    width: 45%;
     list-style: none;
     margin-top: 1.5em;
     margin-bottom: 1em;
-    padding-left: 1em;
-    padding-right: 1em;
+    padding: 1em;
+    border-radius: 10px;
+    text-align: center;
+    border: 3px solid rgba(255, 255, 255, 1.0);
+}
+
+.portfolio-box:Hover {
+    border: 4px solid rgba(255, 255, 255, 1.0);
+    color: white;
 }
 
 .portfolio > ul > li > a {
     font-size: 2.4em;
     font-weight: 600;
-    text-align: left;
-    margin-top: 1.5em;
-    margin-bottom: 1em;
+    line-height: 1.6em;
+    text-decoration: none;
+    /*color: rgb(255, 255, 255);*/
+    margin-top: 1em;
+    margin-bottom: 2em;
+    visibility: hidden;
+}
+
+.portfolio > ul > li:hover > a {
+    color: #006dff;
+    visibility: visible;
 }
 
 .portfolio > ul > li > p {
     font-size: 2.4em;
     font-weight: 200;
+    text-decoration: none;
+    visibility: hidden;
+}
+
+.portfolio > ul > li:hover > p {
+    visibility: visible;
+    color: rgb(255, 255, 255);
+}
+
+.portfolio > ul > li > p > a {
+    text-decoration: none;
+    color: #006dff;
+}
+
+.front-dreamers,
+.front-snake,
+.front-szortal,
+.front-dtp {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.front-dreamers:hover,
+.front-snake:hover,
+.front-szortal:hover,
+.front-dtp:hover {
+    background-image: url("");
+    background-color: rgb(0, 0, 0);
+}
+
+.front-dreamers {
+    background-image: url("../images/front-dreamers.jpg");
+}
+
+.front-snake {
+    background-image: url("../images/front-snake.jpg");
+}
+
+.front-szortal {
+    background-image: url("../images/front-szortal.jpg");
+}
+
+.front-dtp {
+    background-image: url("../images/front-dtp.jpg");
 }
 
 .contact-me > form > input,
 .contact-me > form > textarea,
-.contact-me > form > button{
+.contact-me > form > button {
     border-bottom: 1px;
     border-left: 1px;
     border-color: #7e7e7e;
@@ -246,6 +305,7 @@ main {
     text-align: left;
     padding-left: 0.4em;
 }
+
 .contact-me > form > button {
     text-align: center;
     padding: 0 0.4em;
@@ -271,17 +331,17 @@ main {
     font-size: 2em;
 }
 
-.footer-bar-container  > ul > li > a {
+.footer-bar-container > ul > li > a {
     color: #ffffff;
     text-decoration: none;
 }
 
-.footer-bar-container  > ul > li > a > i:hover {
+.footer-bar-container > ul > li > a > i:hover {
     transform: scale(1.10);
     color: #006dff;
 }
 
-.footer-bar-container  > ul > li > p {
+.footer-bar-container > ul > li > p {
     font-size: 0.7em;
     font-weight: 100;
 }
@@ -289,5 +349,15 @@ main {
 button,
 input,
 textarea {
-     outline: none;
+    outline: none;
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: stretch;
+    justify-content: space-around;
+}
+
+.flex-item {
 }
