--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,6 @@
 html {
   font-size: 50%;
 }
-@media screen and (min-width: 992px) {
-  html {
-    font-size: 62.5%;
-  }
-}
 .color-bright {
   color: #ffffff;
 }
@@ -135,7 +130,7 @@ main {
   margin: 1em 0 1em 0;
 }
 .about-me > h3 {
-  font-size: 4.0rem;
+  font-size: 4rem;
   font-weight: 600;
   text-align: center;
   margin-top: 1.5em;
@@ -143,7 +138,7 @@ main {
 }
 .about-me > p,
 .about-me > ul > li {
-  font-size: 4.0rem;
+  font-size: 4rem;
   font-weight: 200;
 }
 .about-me > p {
@@ -188,105 +183,65 @@ main {
 }
 .portfolio {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   align-content: flex-start;
-  justify-content: space-around;
+}
+@media only screen and (min-width: 992px) {
+  .portfolio {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
 }
 .portfolio h2 {
   width: 100%;
+  text-align: center;
 }
 .portfolio .portfolio-item {
-  width: 95%;
-  margin-bottom: 4em;
-  padding: 1em 2em;
-  border-radius: 10px;
-  text-align: center;
-  border: 3px solid #ffffff;
-  background-color: #000000;
-  height: 390px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  align-self: stretch;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: flex-start;
+  margin-bottom: 10em;
 }
-@media screen and (min-width: 992px) {
+@media only screen and (min-width: 992px) {
   .portfolio .portfolio-item {
-    width: 45%;
+    width: 42%;
+    padding: 0;
   }
-  .portfolio .portfolio-item:hover {
-    background-image: url("");
-    background-color: #000000;
-    animation-name: inbox;
-    transition-duration: 800ms;
-    border: 3px solid #ffffff;
-  }
-  .portfolio .portfolio-item:hover a {
-    visibility: visible;
-  }
-  .portfolio .portfolio-item:hover p {
-    visibility: visible;
-    font-size: 3.4rem;
-    color: #FFF;
-  }
-  .portfolio .portfolio-item:hover p a {
-    font-size: 3.4rem;
-    font-weight: 400;
-    text-decoration: none;
-    color: #006dff;
-  }
-  @keyframes inbox {
-    0% {
-      background-color: rgba(0, 0, 0, 0);
-    }
-    100% {
-      background-color: #000000;
-    }
-  }
+}
+.portfolio .portfolio-item img {
+  align-self: flex-start;
+  width: 100%;
+  margin-bottom: 20px;
+  box-shadow: 0 0 23px 0 #006dff;
 }
 .portfolio .portfolio-item a {
-  font-size: 6.0rem;
-  font-weight: 600;
-  line-height: 1.6em;
+  align-self: flex-start;
+  font-size: 4.2rem;
+  font-weight: 700;
   text-decoration: none;
   color: #006dff;
-  margin-top: 1em;
-  margin-bottom: 2em;
-  visibility: visible;
-}
-@media screen and (min-width: 992px) {
-  .portfolio .portfolio-item a {
-    visibility: hidden;
-  }
+  margin-bottom: 10px;
+  border: 1px #006dff solid;
+  padding: 4px 8px;
+  border-radius: 5px;
 }
 .portfolio .portfolio-item p {
-  font-size: 4.0rem;
+  align-self: flex-start;
+  font-size: 3rem;
   font-weight: 200;
   text-decoration: none;
-  color: #ffffff;
-  visibility: visible;
+  text-align: center;
+  color: #000;
 }
 .portfolio .portfolio-item p a {
-  font-size: 4.0rem;
+  font-size: 3rem;
   font-weight: 400;
-}
-@media screen and (min-width: 992px) {
-  .portfolio .portfolio-item p {
-    visibility: hidden;
-  }
-}
-@media screen and (min-width: 992px) {
-  .portfolio .front-textprocessor {
-    background-image: url("../images/front-textprocessor.jpg");
-  }
-}
-@media screen and (min-width: 992px) {
-  .portfolio .front-snake {
-    background-image: url("../images/front-snake.jpg");
-  }
-}
-@media screen and (min-width: 992px) {
-  .portfolio .front-szortal {
-    background-image: url("../images/front-szortal.jpg");
-  }
+  color: #006dff;
+  border: 0px;
+  background: none;
 }
 .contact-me form > * {
   border-bottom: 1px;
@@ -294,7 +249,7 @@ main {
   border-color: #7e7e7e;
   border-style: solid;
   border-radius: 0.4em;
-  font-size: 4.0rem;
+  font-size: 4rem;
   font-weight: 200;
   line-height: 1.4em;
   margin-bottom: 0.8em;
