--- a/less/styles.less
+++ b/less/styles.less
@@ -1,6 +1,13 @@
 //Colors
-@black: #000;
 @white: #fff;
+@black: #000;
+
+@link: #006dff;
+@hline: #aaa;
+
+
+//RWD
+@desktop: ~"only screen and (min-width: 992px)";
 
 * {
     font-family: 'Raleway', sans-serif;
@@ -12,12 +19,6 @@
 
 html {
   font-size: 50%;
-}
-
-@media screen and (min-width: 992px) {
-    html {
-        font-size: 62.5%;
-    }
 }
 
 
@@ -228,109 +229,68 @@ main {
 // Portfolio start
 .portfolio {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-content: flex-start;
-    justify-content: space-around;
+
+    @media @desktop {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
 
     h2 {
         width: 100%;
+        text-align: center;
     }
 
     .portfolio-item {
-        width: 95%;
-        margin-bottom:  4em;
-        padding: 1em 2em;
-        border-radius: 10px;
-        text-align: center;
-        border: 3px solid rgba(255, 255, 255, 1.0);
-        background-color: rgba(0, 0, 0, 1.0);
-        height: 390px; 
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
+        align-self: stretch;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-content: flex-start;
+        margin-bottom: 10em;
 
-        @media screen and (min-width: 992px) {
-            width: 45%;
-            &:hover {
-                background-image: url("");
-                background-color: rgb(0, 0, 0);
-                animation-name: inbox;
-                transition-duration: 800ms;
-                border: 3px solid rgba(255, 255, 255, 1.0);
-                a {
-                    visibility: visible;
-                }
-                p {
-                    visibility: visible;
-                    font-size: 3.4rem;
-                    color: #FFF;
-                    a {
-                        font-size: 3.4rem;
-                        font-weight: 400;
-                        text-decoration: none;
-                        color: #006dff; 
-                    }  
-                }
-            }
-        
-            @keyframes inbox {
-                0% {
-                 background-color: rgba(0, 0, 0, 0.0);
-                }
-                100% {
-                 background-color: rgba(0, 0, 0, 1.0);
-                }
-            }
+        @media @desktop {
+            width: 42%;
+            padding: 0;
         }
-        a {
-            font-size: 6.0rem;
-            font-weight: 600;
-            line-height: 1.6em;
-            text-decoration: none;
-            color: #006dff;
-            margin-top: 1em;
-            margin-bottom: 2em;
-            visibility: visible;
-        
-            @media screen and (min-width: 992px) {
-                visibility: hidden;
-            }
 
+        img {
+            align-self: flex-start;
+            width: 100%;
+            margin-bottom: 20px;
+            box-shadow: 0 0 23px 0 @link;
+        }
+        
+        a {
+            align-self: flex-start;
+            font-size: 4.2rem;
+            font-weight: 700;
+            text-decoration: none;
+            color: @link;
+            margin-bottom: 10px;
+            border: 1px @link solid;
+            padding: 4px 8px;
+            border-radius: 5px;
         }
 
         p {
-            font-size: 4.0rem;
+            align-self: flex-start;
+            font-size: 3.0rem;
             font-weight: 200;
             text-decoration: none;
-            color: rgb(255, 255, 255);
-            visibility: visible;
+            text-align: center;
+            color: @black;
+
 
             a {
-                font-size: 4.0rem;
+                font-size: 3.0rem;
                 font-weight: 400;
-            }
-            
-            @media screen and (min-width: 992px) {
-                visibility: hidden;
+                color: @link;
+                border: 0px;
+                background: none;
             } 
-        }
-    }
-
-    .front-textprocessor {
-        @media screen and (min-width: 992px) {
-            background-image: url("../images/front-textprocessor.jpg");
-        }
-    }
-
-    .front-snake {
-        @media screen and (min-width: 992px) {
-            background-image: url("../images/front-snake.jpg");
-        }
-    }
-
-    .front-szortal {
-        @media screen and (min-width: 992px) {
-            background-image: url("../images/front-szortal.jpg");
         }
     }
 }
@@ -376,14 +336,14 @@ main {
             cursor: pointer;
             transition: all 0.5s;
 
-        &:active {
-            color: white;
-            text-align: center;
-            padding: 0 0.4em;
-            display: inline-block;
-            background-color: #006dff;
-            transform: scale(1.1);
-        }
+            &:active {
+                color: white;
+                text-align: center;
+                padding: 0 0.4em;
+                display: inline-block;
+                background-color: #006dff;
+                transform: scale(1.1);
+            }
         }
     }
 }
