--- a/css/styles.css
+++ b/css/styles.css
@@ -99,28 +99,6 @@ main {
   padding: 3em 4em 0 4em;
   position: relative;
 }
-.intro {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.intro > h1 {
-  font-size: 7.2rem;
-  font-weight: 600;
-  letter-spacing: 2px;
-  text-align: center;
-  color: white;
-  text-shadow: 2px 2px black;
-}
-.intro > h2 {
-  margin-top: 2em;
-  font-size: 3.6rem;
-  font-weight: 100;
-  letter-spacing: 4px;
-  text-align: center;
-  color: white;
-}
 .about-me > h2,
 .portfolio > h2,
 .contact-me > h2 {
@@ -129,57 +107,94 @@ main {
   text-align: center;
   margin: 1em 0 1em 0;
 }
-.about-me > h3 {
+.intro {
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+}
+.intro h1 {
+  width: 100%;
+  font-size: 7.2rem;
+  font-weight: 600;
+  letter-spacing: 2px;
+  text-align: center;
+  color: white;
+  text-shadow: 2px 2px black;
+}
+.intro h2 {
+  width: 100%;
+  margin-top: 2em;
+  font-size: 3.6rem;
+  font-weight: 100;
+  letter-spacing: 8px;
+  text-align: center;
+  color: white;
+}
+.about-me h3 {
   font-size: 4rem;
   font-weight: 600;
   text-align: center;
   margin-top: 1.5em;
   margin-bottom: 0.4em;
 }
-.about-me > p,
-.about-me > ul > li {
+.about-me p {
   font-size: 4rem;
   font-weight: 200;
-}
-.about-me > p {
   text-align: center;
 }
-.about-me > ul > li {
-  text-align: left;
-}
-#skills {
+.about-me .about-me-skills {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  flex-direction: column;
 }
-#skills > li {
-  width: 50%;
+@media only screen and (min-width: 992px) {
+  .about-me .about-me-skills {
+    flex-direction: row;
+  }
+}
+.about-me .about-me-skills p {
+  width: 100%;
+  font-size: 4rem;
+  font-weight: 200;
+}
+.about-me .about-me-skills div {
+  width: 100%;
+  font-size: 4rem;
+  font-weight: 200;
   text-align: center;
-  list-style: none;
-  font-weight: 300;
   margin-bottom: 1em;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-self: flex-start;
 }
-@media screen and (max-width: 991px) {
-  #skills {
-    flex-direction: column;
-  }
-  #skills > li {
-    width: 100%;
+@media only screen and (min-width: 992px) {
+  .about-me .about-me-skills div {
+    flex: 1 1 40%;
+    flex-wrap: wrap;
   }
 }
-#skills > li > div > img {
+.about-me .about-me-skills div p {
+  font-size: 4rem;
+  font-weight: 200;
+}
+.about-me .about-me-skills div img {
+  width: 70px;
   height: 70px;
+  margin: 0.6em 0.2em;
+}
+.about-me .about-me-skills div a img {
   margin-top: 0.3em;
   margin-bottom: 0.5em;
+  width: 400px;
 }
-#skills > li > div > a > img {
-  margin-top: 0.3em;
-  margin-bottom: 0.5em;
-  max-width: 100%;
-}
-.clear {
-  clear: left;
-  display: block;
+@media only screen and (min-width: 992px) {
+  .about-me .about-me-skills div a img {
+    max-width: 600px;
+  }
 }
 .portfolio {
   display: flex;
@@ -242,14 +257,14 @@ main {
 }
 .portfolio .portfolio-item p {
   align-self: flex-start;
-  font-size: 3rem;
+  font-size: 4rem;
   font-weight: 200;
   text-decoration: none;
   text-align: center;
   color: #000;
 }
 .portfolio .portfolio-item p a {
-  font-size: 3rem;
+  font-size: 4rem;
   font-weight: 400;
   color: #006dff;
   border: 0px;
