--- a/less/styles.less
+++ b/less/styles.less
@@ -130,31 +130,6 @@ main {
     position: relative;
 }
 
-.intro {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
-
-.intro > h1 {
-    font-size: 7.2rem;
-    font-weight: 600;
-    letter-spacing: 2px;
-    text-align: center;
-    color: white;
-    text-shadow: 2px 2px black;
-}
-
-.intro > h2 {
-    margin-top: 2em;
-    font-size: 3.6rem;
-    font-weight: 100;
-    letter-spacing: 4px;
-    text-align: center;
-    color: white;
-}
-
 .about-me > h2,
 .portfolio > h2,
 .contact-me > h2 {
@@ -164,67 +139,109 @@ main {
     margin: 1em 0 1em 0;
 }
 
-.about-me > h3 {
+.intro {
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+
+    h1 {
+        width: 100%;
+        font-size: 7.2rem;
+        font-weight: 600;
+        letter-spacing: 2px;
+        text-align: center;
+        color: white;
+        text-shadow: 2px 2px black;
+    }
+
+    h2 {
+        width: 100%;
+        margin-top: 2em;
+        font-size: 3.6rem;
+        font-weight: 100;
+        letter-spacing: 8px;
+        text-align: center;
+        color: white;
+    }
+}
+
+
+.about-me {
+    h3 {
     font-size: 4.0rem;
     font-weight: 600;
     text-align: center;
     margin-top: 1.5em;
     margin-bottom: 0.4em;
-}
+    }
 
-.about-me > p,
-.about-me > ul > li {
-    font-size: 4.0rem;
-    font-weight: 200;
-}
+    p {
+        font-size: 4.0rem;
+        font-weight: 200;
+        text-align: center;
+    }
 
-.about-me > p {
-    text-align: center;
-}
-
-.about-me > ul > li {
-    text-align: left;
-}
-
-#skills {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-#skills > li {
-    width: 50%;
-    text-align: center;
-    list-style: none;
-    font-weight: 300;
-    margin-bottom: 1em;
-}
-
-@media screen and (max-width: 991px) {
-    #skills {
+    .about-me-skills {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
         flex-direction: column;
+
+        @media @desktop {
+            flex-direction: row;
+        }
+
+        p {
+            width: 100%;
+            font-size: 4.0rem;
+            font-weight: 200;
+        }
+
+        div {
+            width: 100%;
+            font-size: 4.0rem;
+            font-weight: 200;
+            text-align: center;
+            margin-bottom: 1em;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            align-self: flex-start;
+
+
+            @media @desktop {
+                flex: 1 1 40%;
+                flex-wrap: wrap;
+            }
+
+            p {
+                font-size: 4.0rem;
+                font-weight: 200;
+            }
+
+            img {
+                width: 70px;
+                height: 70px;
+                margin: 0.6em .2em;  
+            }
+
+            a {
+                img {
+                    margin-top: 0.3em;
+                    margin-bottom: 0.5em;
+                    width: 400px; 
+          
+                    @media @desktop {
+                        max-width: 600px;
+                    }
+                }
+            }
+        }
     }
-    #skills > li {
-        width: 100%;
-    }
 }
 
-#skills > li > div > img {
-    height: 70px;
-    margin-top: 0.3em;
-    margin-bottom: 0.5em;
-}
-
-#skills > li > div > a > img {
-    margin-top: 0.3em;
-    margin-bottom: 0.5em;
-    max-width: 100%;
-}
-
-.clear {
-    clear: left;
-    display: block;
-}
 
 // Portfolio start
 .portfolio {
@@ -287,7 +304,7 @@ main {
 
         p {
             align-self: flex-start;
-            font-size: 3.0rem;
+            font-size: 4.0rem;
             font-weight: 200;
             text-decoration: none;
             text-align: center;
@@ -295,7 +312,7 @@ main {
 
 
             a {
-                font-size: 3.0rem;
+                font-size: 4.0rem;
                 font-weight: 400;
                 color: @link;
                 border: 0px;
